# example-application

./: .env  Cargo.toml  README.md
priv/: public-key.json  secret-key.json
src/: error.rs  lib.rs  main.rs
src/controllers/: oauth.rs
src/oauth/: crypto.rs  flow.rs  mod.rs  session.rs  settings.rs
templates/: main.html.hbs
