[package]
name = "example-application"
version = "0.0.1"
authors = [ "Edward Tate <ed@bitt.com>" ]

[dependencies]
rocket = "0.2.3"
rocket_codegen = "0.2.3"
rocket_contrib = { version = "0.2.0", features = [ "handlebars_templates" ] }
handlebars = "0.25.0"
openssl = "*"
reqwest = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
rustc-serialize = "*"
dotenv = "0.8.0"
rand = "*"